add connector spec

--- a/.rubocop.yml
+++ b/.rubocop.yml
@@ -18,5 +18,8 @@ Style/IndentationConsistency:
 Style/BlockLength:
   Exclude:
     - 'spec/**/*.rb'
+Style/SingleLineMethods:
+  Exclude:
+    - 'spec/**/*.rb'
 AsciiComments:
   Enabled: false
