--- a/.travis.yml
+++ b/.travis.yml
@@ -1,4 +1,14 @@
 language: ruby
 rvm:
   - 2.3.0
-before_install: gem install bundler -v 1.11.2
+branches:
+  only:
+    - master
+before_install:
+  - gem update --system
+  - gem install bundler
+install:
+  - bundle install --retry=3
+script:
+  - bundle exec rubocop --fail-level=W
+  - bundle exec rspec spec/
